Lots of updates to structure of UI, and added a Field Display

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -238,43 +238,40 @@ admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.order_nav=Orders
 admin.orderfulfillment.process=Process Fulfillment
-admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
-admin.pricegroup=Price Group Manager
-admin.pricegroup.createPriceGroup=Create New Price Group
-admin.pricegroup.default=Price Group Dashboard
-admin.pricegroup.deletePriceGroup=Delete Price Group
-admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
-admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
-admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
-admin.pricegroup.deletePriceGroupRate_failure=The Price Group could not be deleted.
-admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully.
-admin.pricegroup.deletePriceGroup_confirm=Are you sure you want to delete this price group?
-admin.pricegroup.deletePriceGroup_failure=The Price Group could not be deleted.
-admin.pricegroup.deletePriceGroup_success=Price Group was deleted successfully.
-admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
-admin.pricegroup.delete_nav=Delete
-admin.pricegroup.delete_success=Price Group was deleted successfully
-admin.pricegroup.deletepricegroup_disabled=This price group can not be deleted because it is being inherited by another price group.
-admin.pricegroup.detail.globalwarning=<strong>Warning\!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will disable the global flag on that rate.
-admin.pricegroup.detail.ratetype=Rate Type
-admin.pricegroup.detail_hint=View the Info page of a given Price Group
-admin.pricegroup.detail_permission=View Price Group Info
-admin.pricegroup.detailpricegroup=Price Group Detail
-admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
-admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
-admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
-admin.pricegroup.edit.priceGroupRates=Price Group Rates
-admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
-admin.pricegroup.editPriceGroup=Edit Price Group
-admin.pricegroup.listPriceGroups=List Price Groups
-admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
-admin.pricegroup.savePriceGroup=Save Price Group
-admin.pricegroup.save_nav=Save
-admin.pricegroup.save_success=Price Group was saved successfully
-admin.pricegroup.savepricegroup_nowaddrates=The price group was successfully saved. You can now add rates.
-admin.pricegroup.savepricegroup_success=The price group was successfully saved.
-admin.pricegroup.savepricegrouprate_success=The price group and price group rate were successfully saved.
-admin.pricegroups.nopricegroupratesdefined=There are currently no price group rates defined.
+admin.pricing.detailpriceGroup.noPriceGroupRatesDefined=There are currently no price group rates defined.
+admin.pricing.createPriceGroup=Create New Price Group
+admin.pricing.deletePriceGroup=Delete Price Group
+admin.pricing.deletePriceGroupRate=Delete Price Group Rate
+admin.pricing.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
+admin.pricing.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
+admin.pricing.deletePriceGroupRate_failure=The Price Group could not be deleted.
+admin.pricing.deletePriceGroupRate_success=Price Group Rate was deleted successfully.
+admin.pricing.deletePriceGroup_confirm=Are you sure you want to delete this price group?
+admin.pricing.deletePriceGroup_failure=The Price Group could not be deleted.
+admin.pricing.deletePriceGroup_success=Price Group was deleted successfully.
+admin.pricing.deletepriceGroup_confirm=Are you sure you want to delete this price group?
+admin.pricing.deletepriceGroup_nav=Delete
+admin.pricing.deletepriceGroup_success=Price Group was deleted successfully
+admin.pricing.deletepricegroup_disabled=This price group can not be deleted because it is being inherited by another price group.
+admin.pricing.detailpriceGroup.globalwarning=<strong>Warning\!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will disable the global flag on that rate.
+admin.pricing.detailpriceGroup.ratetype=Rate Type
+admin.pricing.detailpriceGroup_hint=View the Info page of a given Price Group
+admin.pricing.detailpriceGroup_permission=View Price Group Info
+admin.pricing.detailpricegroup=Price Group Detail
+admin.pricing.editpriceGroup.addPriceGroupRate=Add Price Group Rate
+admin.pricing.editpriceGroup.editPriceGroupRate=Edit Price Group Rate
+admin.pricing.editpriceGroup.priceGroupRateAppliesToAllProducts=All Products
+admin.pricing.editpriceGroup.priceGroupRates=Price Group Rates
+admin.pricing.editpriceGroup.removePriceGroupRate=Remove Price Group Rate
+admin.pricing.editPriceGroup=Edit Price Group
+admin.pricing.listPriceGroups=List Price Groups
+admin.pricing.nopricegroupsdefined=There are currently no price groups defined.
+admin.pricing.savePriceGroup=Save Price Group
+admin.pricing.savepriceGroup_success=Price Group was saved successfully
+admin.pricing.savepricegroup_nowaddrates=The price group was successfully saved. You can now add rates.
+admin.pricing.savepricegroup_success=The price group was successfully saved.
+admin.pricing.savepricegrouprate_success=The price group and price group rate were successfully saved.
+admin.pricing.nopricegroupratesdefined=There are currently no price group rates defined.
 admin.pricing=Pricing Manager
 admin.pricing_nav=Pricing
 admin.product=Product Manager
@@ -392,86 +389,75 @@ admin.product.uploadSkuImage_error=An error ocurred uploading the image or it wa
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
 admin.product_nav=Products
-admin.promotion=Promotion Manager
-admin.promotion.addShippingMethod=Add Shipping Method
-admin.promotion.create=Create New Promotion
-admin.promotion.default=Promotion Dashboard
-admin.promotion.delete=Delete Promotion
-admin.promotion.deletePromotionCode=Delete Promotion Code
-admin.promotion.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
-admin.promotion.deletePromotionCode_disabled=Promotion code can not be deleted because it is in use
-admin.promotion.deletePromotionCode_success=Promotion code was deleted successfully
-admin.promotion.deletePromotionReward=Delete Promotion Reward
-admin.promotion.deletePromotionReward_confirm=Are you sure you want to delete this promotion reward?
-admin.promotion.deletePromotionReward_disabled=Promotion reward can not be deleted because it is in use
-admin.promotion.deletePromotionReward_success=Promotion Reward Deleted
-admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
-admin.promotion.delete_nav=Delete
-admin.promotion.delete_success=Promotion was deleted successfully
-admin.promotion.detail=Promotion Detail
-admin.promotion.detail.addPromotionRewardProduct=Add Product Reward
-admin.promotion.detail.addPromotionRewardShipping=Add Shipping Reward
-admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
-admin.promotion.detail.tabDescription=Description
-admin.promotion.detail.tabPromotionCodes=Promotion Codes
-admin.promotion.detail.tabPromotionRewards=Promotion Rewards
-admin.promotion.detail.tabSummary=Summary
-admin.promotion.detail_hint=View the Info page of a given Promotion
-admin.promotion.detail_permission=View Promotion Info
-admin.promotion.discount.off=off
-admin.promotion.discount.price=price
-admin.promotion.edit=Edit Promotion
-admin.promotion.edit.addPromotionCode=Add Promotion Code
-admin.promotion.edit.addPromotionReward=Add Promotion Reward
-admin.promotion.edit.closeFormPromotionReward=Close
-admin.promotion.edit.discount=Discount
-admin.promotion.edit.removePromotionCode=Remove Promotion Code
-admin.promotion.edit.removePromotionReward=Remove Promotion Reward
-admin.promotion.edit.rewardType=Reward Type
-admin.promotion.edit.shippingMethod=Shipping Method
-admin.promotion.edit.validatePromotionReward=Please specify promotion reward
-admin.promotion.editPromotion=Edit Promotion
-admin.promotion.editPromotionReward=Edit Promotion Reward
-admin.promotion.list=List Promotions
-admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
-admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
-admin.promotion.nopromotionsdefined=There are currently no promotions defined.
-admin.promotion.promotionReward.item=Items
-admin.promotion.promotionRewardProduct.discountType=Discount Type
-admin.promotion.promotionRewardProduct.discountType.amount=Fixed Amount
-admin.promotion.promotionRewardProduct.discountType.amountOff=Amount Off
-admin.promotion.promotionRewardProduct.discountType.percentageOff=Percentage Off
-admin.promotion.promotionRewardShipping.discountType=Discount Type
-admin.promotion.promotionRewardShipping.discountType.amount=Fixed Amount
-admin.promotion.promotionRewardShipping.discountType.amountOff=Amount Off
-admin.promotion.promotionRewardShipping.discountType.percentageOff=Percentage Off
-admin.promotion.save=Save Promotion
-admin.promotion.save_nav=Save
-admin.promotion.save_success=Promotion was saved successfully
+admin.pricing.createpromotion=Create New Promotion
+admin.pricing.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
+admin.pricing.deletePromotionCode_disabled=Promotion code can not be deleted because it is in use
+admin.pricing.deletePromotionCode_success=Promotion code was deleted successfully
+admin.pricing.deletePromotionReward=Delete Promotion Reward
+admin.pricing.deletePromotionReward_confirm=Are you sure you want to delete this promotion reward?
+admin.pricing.deletePromotionReward_disabled=Promotion reward can not be deleted because it is in use
+admin.pricing.deletePromotionReward_success=Promotion Reward Deleted
+admin.pricing.deletepromotion_confirm=Are you sure you want to delete this promotion?
+admin.pricing.deletepromotion_success=Promotion was deleted successfully
+admin.pricing.detailpromotion=Promotion Detail
+admin.pricing.detailpromotion.addPromotionRewardProduct=Add Product Reward
+admin.pricing.detailpromotion.addPromotionRewardShipping=Add Shipping Reward
+admin.pricing.detailpromotion.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
+admin.pricing.detailpromotion.tabDescription=Description
+admin.pricing.detailpromotion.tabPromotionCodes=Promotion Codes
+admin.pricing.detailpromotion.tabPromotionRewards=Promotion Rewards
+admin.pricing.detailpromotion.tabSummary=Summary
+admin.pricing.detailpromotion_hint=View the Info page of a given Promotion
+admin.pricing.detailpromotion_permission=View Promotion Info
+admin.pricing.discount.off=off
+admin.pricing.discount.price=price
+admin.pricing.editpromotion=Edit Promotion
+admin.pricing.editpromotion.addPromotionCode=Add Promotion Code
+admin.pricing.editpromotion.addPromotionReward=Add Promotion Reward
+admin.pricing.editpromotion.closeFormPromotionReward=Close
+admin.pricing.editpromotion.discount=Discount
+admin.pricing.editpromotion.removePromotionCode=Remove Promotion Code
+admin.pricing.editpromotion.removePromotionReward=Remove Promotion Reward
+admin.pricing.editpromotion.rewardType=Reward Type
+admin.pricing.editpromotion.shippingMethod=Shipping Method
+admin.pricing.editpromotion.validatePromotionReward=Please specify promotion reward
+admin.pricing.editPromotion=Edit Promotion
+admin.pricing.editPromotionReward=Edit Promotion Reward
+admin.pricing.listpromotions=List Promotions
+admin.pricing.noShippingMethodsConfigured=There are currently no shipping methods configured.
+admin.pricing.nopromotionrewardsdefined=No Promotion Rewards have been defined.
+admin.pricing.nopromotionsdefined=There are currently no promotions defined.
+admin.pricing.promotionReward.item=Items
+admin.pricing.promotionRewardProduct.discountType=Discount Type
+admin.pricing.promotionRewardProduct.discountType.amount=Fixed Amount
+admin.pricing.promotionRewardProduct.discountType.amountOff=Amount Off
+admin.pricing.promotionRewardProduct.discountType.percentageOff=Percentage Off
+admin.pricing.promotionRewardShipping.discountType=Discount Type
+admin.pricing.promotionRewardShipping.discountType.amount=Fixed Amount
+admin.pricing.promotionRewardShipping.discountType.amountOff=Amount Off
+admin.pricing.promotionRewardShipping.discountType.percentageOff=Percentage Off
+admin.pricing.savepromotion_success=Promotion was saved successfully
 admin.report=Reporting Services
 admin.report.order=Order Report
 admin.report_nav=Reporting
-admin.roundingRule.detail.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
-admin.roundingrule=Rounding Rule Manager
-admin.roundingrule.create=Create New Rounding Rule
-admin.roundingrule.delete=Delete Rounding Rule use
-admin.roundingrule.delete_confirm=Are you sure you want to delete this rounding rule?
-admin.roundingrule.delete_disabled=Rounding Rule can not be deleted because it is in use
-admin.roundingrule.delete_nav=Delete
-admin.roundingrule.delete_success=Rounding Rule was deleted successfully
-admin.roundingrule.detail=Rounding Rule Detail
-admin.roundingrule.detail_hint=View the Info page of a given Rounding Rule
-admin.roundingrule.detail_permission=View Rounding Rule Info
-admin.roundingrule.edit=Edit Rounding Rule
-admin.roundingrule.list=List Rounding Rules
-admin.roundingrule.noroundingrulesdefined=There are currently no rounding rules defined.
-admin.roundingrule.save=Save Rounding Rule
-admin.roundingrule.save_nav=Save
-admin.roundingrule.save_success=Rounding Rule was saved successfully
-admin.roundingrule.saveroundingrule_success=The rounding rule was successfully saved.
-admin.roundingrule.saveroundingrulerate_success=The rounding rule and rounding rule rate were successfully saved.
-admin.search.cleardates=Clear Dates
-admin.selectBox.select=Select
+admin.setting.detailroundingrule.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
+admin.setting.createroundingrule=Create New Rounding Rule
+admin.setting.deleteroundingrule=Delete Rounding Rule use
+admin.setting.deleteroundingrule_confirm=Are you sure you want to delete this rounding rule?
+admin.setting.deleteroundingrule_disabled=Rounding Rule can not be deleted because it is in use
+admin.setting.deleteroundingrule_nav=Delete
+admin.setting.deleteroundingrule_success=Rounding Rule was deleted successfully
+admin.setting.detailroundingrule=Rounding Rule Detail
+admin.setting.detailroundingrule_hint=View the Info page of a given Rounding Rule
+admin.setting.detailroundingrule_permission=View Rounding Rule Info
+admin.setting.editroundingrule=Edit Rounding Rule
+admin.setting.listroundingrule=List Rounding Rules
+admin.setting.noroundingrulesdefined=There are currently no rounding rules defined.
+admin.setting.saveroundingrule=Save Rounding Rule
+admin.setting.saveroundingrule_nav=Save
+admin.setting.saveroundingrule_success=Rounding Rule was saved successfully
+admin.setting.saveroundingrule_success=The rounding rule was successfully saved.
+admin.setting.saveroundingrulerate_success=The rounding rule and rounding rule rate were successfully saved.
 admin.setting=Settings Manager
 admin.setting.createTaxCategory=Create Tax Category
 admin.setting.createaddresszone=Create New Address Zone
