Absctracted the action bar.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -378,12 +378,12 @@ admin.product.edit.removesku=Remove SKU
 admin.product.editbrand=Edit Brand
 admin.product.editproducttype=Edit Product Type
 admin.product.list.inventoryNotTracked=Inventory is not tracked for this product.
-admin.product.listbrands=List Brands
-admin.product.listbrands.nobrandsdefined=There are currently no product brands defined.
-admin.product.listoptiongroups=List Option Groups
-admin.product.listproductreviews=List Product Reviews
-admin.product.listproducts=List Products
-admin.product.listproducttypes=List Product Types
+admin.product.listbrand=Brands
+admin.product.listbrand.nobrandsdefined=There are currently no product brands defined.
+admin.product.listoptiongroup=Option Groups
+admin.product.listproduct=Products
+admin.product.listproductreview=List Product Reviews
+admin.product.listproducttype=Product Types
 admin.product.noProductsDefined=No Products have been entered.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
