Multiple updates to UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -812,6 +812,7 @@ define.QVOMIN.full=Quantity Min Per Order
 define.actions=Actions
 define.all=All
 define.autoIncrement=Auto Increment
+define.backtolist=Back To List
 define.cancel=Cancel
 define.createdByAccount=Created By
 define.createdDateTime=Created
