Added some brand tabs

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -231,6 +231,8 @@ admin.product.alternateImages.preview=Preview Image
 admin.product.alternateImages.uploadimage=Upload Image
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
+admin.product.brandtabs.products=Products
+admin.product.brandtabs.vendors=Vendors
 admin.product.categories=Categories
 admin.product.changeParentProductType_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.create.disabled=Products cannot be created until the following actions are taken\:
@@ -759,6 +761,7 @@ define.QVOMAX.full=Quantity Max Per Order
 define.QVOMIN=QVOMIN
 define.QVOMIN.full=Quantity Min Per Order
 define.actions=Actions
+define.active=Active
 define.all=All
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
@@ -782,11 +785,13 @@ define.na=N/A
 define.no=No
 define.none=None
 define.notapplicable=N/A
+define.remoteID=Remote ID
 define.save=Save
 define.select=Select
 define.selectall=Select All
 define.show=Show
 define.true=True
+define.urlTitle=URL Title
 define.username=Username
 define.yes=Yes
 entity.Order.fulfillmentTotal=Delivery Charges
