--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -451,7 +451,7 @@ admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
 admin.setting.importbundledata=Import Bundle Data
 admin.setting.importbundledata_confirm=Are you 100% sure you want to delete all of the data in your database and import whatever was created in the bundle?
-admin.setting.listLocation=List Locations
+admin.setting.listLocation=Locations
 admin.setting.listLocation_hint=The Location Listing shows a grid of all locations in the system.
 admin.setting.listLocation_nav=Locations
 admin.setting.listPaymentServices=Payment Service Listing
@@ -460,7 +460,7 @@ admin.setting.listPaymentServices_nav=Configure Payment Services
 admin.setting.listTaxCategories=Tax Categories
 admin.setting.listaddresszones=Address Zones
 admin.setting.listaddresszones_nav=Address Zones
-admin.setting.listattributeset=List Attribute Sets
+admin.setting.listattributeset=Attribute Sets
 admin.setting.listattributeset.norecords=No Attribute Sets have been defined.
 admin.setting.listattributeset_nav=Attribute Sets
 admin.setting.listfulfillmentmethods=Fulfillment Methods
@@ -468,8 +468,8 @@ admin.setting.listintegrationservices=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
 admin.setting.listpaymentmethods=Payment Method Listing
 admin.setting.listpaymentmethods_nav=Payment Methods
-admin.setting.listroundingrule=List Rounding Rules
-admin.setting.listshippingmethods=List Shipping Methods
+admin.setting.listroundingrule=Rounding Rules
+admin.setting.listshippingmethods=Shipping Methods
 admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
@@ -608,21 +608,21 @@ admin.subscription.saveSubscriptionBenefit_success=Subscription Benefit was save
 admin.subscription.saveSubscriptionTerm=Save Subscription Term
 admin.subscription.saveSubscriptionTerm_nav=Save
 admin.subscription.saveSubscriptionTerm_success=Subscription Term was saved successfully
-admin.term=Term Manager
-admin.term.create=Create New Term
-admin.term.delete=Delete Term
-admin.term.delete_confirm=Are you sure you want to delete this term?
-admin.term.delete_disabled=Term can not be deleted because it is in use
-admin.term.delete_nav=Delete
-admin.term.delete_success=Term was deleted successfully
-admin.term.detail=Term Detail
-admin.term.edit=Edit Term
-admin.term.list=List Terms
-admin.term.notermsdefined=There are currently no terms defined.
-admin.term.save=Save Term
-admin.term.save_nav=Save
-admin.term.save_success=Term was saved successfully
-admin.term.saveterm_success=The term was successfully saved.
+admin.setting.term=Term
+admin.setting.createterm=Create New Term
+admin.setting.deleteterm=Delete Term
+admin.setting.deleteterm_confirm=Are you sure you want to delete this term?
+admin.setting.deleteterm_disabled=Term can not be deleted because it is in use
+admin.setting.deleteterm_nav=Delete
+admin.setting.deleteterm_success=Term was deleted successfully
+admin.setting.detailterm=Term Detail
+admin.setting.editterm=Edit Term
+admin.setting.listterm=Terms
+admin.setting.notermsdefined=There are currently no terms defined.
+admin.setting.saveterm=Save Term
+admin.setting.saveterm_nav=Save
+admin.setting.saveterm_failure=Please correct any error(s) indicated below and re-submit the form.
+admin.setting.saveterm_success=The term was successfully saved.
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
 admin.vendor.createVendorOrder=Create New Vendor Order
