--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -360,12 +360,14 @@ admin.report.order=Order Report
 admin.report_nav=Reporting
 admin.setting=Settings Manager
 admin.setting.addAttributeOption=Add Option
+admin.setting.addresszonetabs.locations=Locations
 admin.setting.createAttributeSet=Create Attribute Set
 admin.setting.createLocation=Create New Location
 admin.setting.createTaxCategory=Create Tax Category
 admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createroundingrule=Create New Rounding Rule
 admin.setting.createshippingmethod=Create New Shipping Method
+admin.setting.createterm=Create New Term
 admin.setting.dashboard=Settings Manager
 admin.setting.default=Setting Dashboard
 admin.setting.deleteAddressZone=Delete Address Zone
@@ -407,7 +409,11 @@ admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
-admin.setting.detail=Global Settings
+admin.setting.deleteterm=Delete Term
+admin.setting.deleteterm_confirm=Are you sure you want to delete this term?
+admin.setting.deleteterm_disabled=Term can not be deleted because it is in use
+admin.setting.deleteterm_nav=Delete
+admin.setting.deleteterm_success=Term was deleted successfully
 admin.setting.detailAttributeSet.addAttribute=Add Attribute
 admin.setting.detailAttributeSet.addAttributeOption=Add Option
 admin.setting.detailAttributeSet.removeAttributeOption=Remove Option
@@ -427,9 +433,11 @@ admin.setting.detailroundingrule=Rounding Rule Detail
 admin.setting.detailroundingrule.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
 admin.setting.detailroundingrule_hint=View the Info page of a given Rounding Rule
 admin.setting.detailroundingrule_permission=View Rounding Rule Info
+admin.setting.detailsetting=Global Settings
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
 admin.setting.detailslatwallupdate=Update Slatwall
+admin.setting.detailterm=Term Detail
 admin.setting.detailviewupdate=Update Views
 admin.setting.edit=Edit Global Settings
 admin.setting.editAttributeSet=Edit Attribute Set
@@ -446,6 +454,7 @@ admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
 admin.setting.edittaxcategory=Edit Tax Category
 admin.setting.edittaxcategory_nav=Edit
+admin.setting.editterm=Edit Term
 admin.setting.fulfillmentMethod.pickup=Pickup
 admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
@@ -454,28 +463,29 @@ admin.setting.importbundledata_confirm=Are you 100% sure you want to delete all 
 admin.setting.listLocation=Locations
 admin.setting.listLocation_hint=The Location Listing shows a grid of all locations in the system.
 admin.setting.listLocation_nav=Locations
-admin.setting.listPaymentServices=Payment Service Listing
-admin.setting.listPaymentServices.servicedisplayname=Payment Service
-admin.setting.listPaymentServices_nav=Configure Payment Services
-admin.setting.listTaxCategories=Tax Categories
-admin.setting.listaddresszones=Address Zones
-admin.setting.listaddresszones_nav=Address Zones
+admin.setting.listaddresszone=Address Zone Listing
+admin.setting.listaddresszone_nav=Address Zones
 admin.setting.listattributeset=Attribute Sets
 admin.setting.listattributeset.norecords=No Attribute Sets have been defined.
 admin.setting.listattributeset_nav=Attribute Sets
-admin.setting.listfulfillmentmethods=Fulfillment Methods
-admin.setting.listintegrationservices=Integration Services Listing
+admin.setting.listfulfillmentmethod=Fulfillment Method Listing
+admin.setting.listfulfillmentmethod_nav=Fulfillment Methods
+admin.setting.listintegrationservice=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
-admin.setting.listpaymentmethods=Payment Method Listing
-admin.setting.listpaymentmethods_nav=Payment Methods
+admin.setting.listpaymentmethod=Payment Method Listing
+admin.setting.listpaymentmethod_nav=Payment Methods
 admin.setting.listroundingrule=Rounding Rules
 admin.setting.listshippingmethods=Shipping Methods
 admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Shipping Services
+admin.setting.listtaxcategory=Tax Categories Listing
+admin.setting.listtaxcategory_nav=Tax Categories
+admin.setting.listterm=Terms
 admin.setting.noAttributesInSet=There are currently no attributes defined in this Attribute Set
 admin.setting.noroundingrulesdefined=There are currently no rounding rules defined.
+admin.setting.notermsdefined=There are currently no terms defined.
 admin.setting.paymentMethod.cash=Cash (beta)
 admin.setting.paymentMethod.check=Check (beta)
 admin.setting.paymentMethod.creditCard=Credit Card
@@ -521,8 +531,13 @@ admin.setting.saveshippingmethod_success=Shipping Method Saved
 admin.setting.saveshippingmethodrate_nav=Add Rate
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
+admin.setting.saveterm=Save Term
+admin.setting.saveterm_failure=Please correct any error(s) indicated below and re-submit the form.
+admin.setting.saveterm_nav=Save
+admin.setting.saveterm_success=The term was successfully saved.
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
+admin.setting.term=Term
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
 admin.setting.updateSkuCache_success=Sku Cache Update Started
@@ -608,21 +623,6 @@ admin.subscription.saveSubscriptionBenefit_success=Subscription Benefit was save
 admin.subscription.saveSubscriptionTerm=Save Subscription Term
 admin.subscription.saveSubscriptionTerm_nav=Save
 admin.subscription.saveSubscriptionTerm_success=Subscription Term was saved successfully
-admin.setting.term=Term
-admin.setting.createterm=Create New Term
-admin.setting.deleteterm=Delete Term
-admin.setting.deleteterm_confirm=Are you sure you want to delete this term?
-admin.setting.deleteterm_disabled=Term can not be deleted because it is in use
-admin.setting.deleteterm_nav=Delete
-admin.setting.deleteterm_success=Term was deleted successfully
-admin.setting.detailterm=Term Detail
-admin.setting.editterm=Edit Term
-admin.setting.listterm=Terms
-admin.setting.notermsdefined=There are currently no terms defined.
-admin.setting.saveterm=Save Term
-admin.setting.saveterm_nav=Save
-admin.setting.saveterm_failure=Please correct any error(s) indicated below and re-submit the form.
-admin.setting.saveterm_success=The term was successfully saved.
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
 admin.vendor.createVendorOrder=Create New Vendor Order
@@ -794,6 +794,7 @@ define.true=True
 define.urlTitle=URL Title
 define.username=Username
 define.yes=Yes
+entity.Address.norecords=No Addresses Defined
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
@@ -880,6 +881,7 @@ entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
 entity.addresszone.delete_validateIsDeletable=This Address Zone cannot be deleted because it is in use.
+entity.addresszone.norecords=No Address Zones Defined
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
 entity.attribute.activeFlag=Active
