Updates to general settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -535,6 +535,9 @@ admin.setting.saveterm=Save Term
 admin.setting.saveterm_failure=Please correct any error(s) indicated below and re-submit the form.
 admin.setting.saveterm_nav=Save
 admin.setting.saveterm_success=The term was successfully saved.
+admin.setting.settingtabs.advanced=Advanced Settings
+admin.setting.settingtabs.order=Order Settings
+admin.setting.settingtabs.product=Product Settings
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.term=Term
