Working on some lists.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -183,11 +183,12 @@ admin.pricing.editpromotion.removePromotionReward=Remove Promotion Reward
 admin.pricing.editpromotion.rewardType=Reward Type
 admin.pricing.editpromotion.shippingMethod=Shipping Method
 admin.pricing.editpromotion.validatePromotionReward=Please specify promotion reward
-admin.pricing.listPriceGroups=List Price Groups
+admin.pricing.listPriceGroup=Price Group List
 admin.pricing.listoptiongroup=List Option Groups
 admin.pricing.listoptiongroup.norecords=No Option Groups have been created.
 admin.pricing.listoptiongroup_nav=Option Groups
-admin.pricing.listpromotions=List Promotions
+admin.pricing.listpricegroup_nav=Price Groups
+admin.pricing.listpromotion=Promotion List
 admin.pricing.noShippingMethodsConfigured=There are currently no shipping methods configured.
 admin.pricing.nopricegroupratesdefined=There are currently no price group rates defined.
 admin.pricing.nopricegroupsdefined=There are currently no price groups defined.
@@ -224,6 +225,7 @@ admin.pricing.savepricegrouprate_success=The price group and price group rate we
 admin.pricing.savepromotion_success=Promotion was saved successfully
 admin.pricing.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
 admin.pricing_nav=Pricing
+admin.pricint.listpromotion_nav=Promotions
 admin.product=Product Manager
 admin.product.alternateImages=Alternate Images
 admin.product.alternateImages.noAlternateImagesExist=No alternate images exisit for this product.
