more view refactoring

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -244,6 +244,8 @@ admin.product.createbrand=Create New Brand
 admin.product.createoptiongroup=Create New Option Group
 admin.product.createproduct=Create New Product
 admin.product.createproducttype=Create New Product Type
+admin.product.createsubscriptionbenefit=Create New Subscription Benefit
+admin.product.createsubscriptionterm=Create New Subscription Term
 admin.product.default=Product Dashboard
 admin.product.delete=Delete Product
 admin.product.deleteImage=Delete Product Image
@@ -267,6 +269,16 @@ admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.deletesku=Delete SKU
 admin.product.deletesku_confirm=Are you sure you want to delete this SKU?
+admin.product.deletesubscriptionbenefit=Delete Subscription Benefit
+admin.product.deletesubscriptionbenefit_confirm=Are you sure you want to delete this subscription benefit?
+admin.product.deletesubscriptionbenefit_disabled=Subscription Benefit can not be deleted because it is in use
+admin.product.deletesubscriptionbenefit_nav=Delete
+admin.product.deletesubscriptionbenefit_success=Subscription Benefit was deleted successfully
+admin.product.deletesubscriptionterm=Delete Subscription Term
+admin.product.deletesubscriptionterm_confirm=Are you sure you want to delete this subscription term?
+admin.product.deletesubscriptionterm_disabled=Subscription Term can not be deleted because it is in use
+admin.product.deletesubscriptionterm_nav=Delete
+admin.product.deletesubscriptionterm_success=Subscription Term was deleted successfully
 admin.product.detail.tab.alternateimages=Alternate Images
 admin.product.detail.tab.customattributes=Custom Attributes
 admin.product.detail.tab.productCategoryAssignment=Mura Category Assignment
@@ -287,6 +299,12 @@ admin.product.detailbrand_permission=View Brand Info
 admin.product.detailinventory=Inventory Detail
 admin.product.detailproduct=Product Detail
 admin.product.detailproducttype=Product Type Details
+admin.product.detailsubscriptionbenefit=Subscription Benefit Detail
+admin.product.detailsubscriptionbenefit_hint=View the Info page of a given Subscription Benefit
+admin.product.detailsubscriptionbenefit_permission=View Subscription Benefit Info
+admin.product.detailsubscriptionterm=Subscription Term Detail
+admin.product.detailsubscriptionterm_hint=View the Info page of a given Subscription Term
+admin.product.detailsubscriptionterm_permission=View Subscription Term Info
 admin.product.edit=Edit Product
 admin.product.edit.addImage=Add Image
 admin.product.edit.addoption=Add Option
@@ -301,6 +319,10 @@ admin.product.listoptiongroup=Option Groups
 admin.product.listproduct=Products
 admin.product.listproductreview=List Product Reviews
 admin.product.listproducttype=Product Types
+admin.product.listsubscriptionbenefit=Subscription Benefit
+admin.product.listsubscriptionbenefit.nosubscriptionbenefitsdefined=There are currently no subscription benefits defined.
+admin.product.listsubscriptionterm=Subscription Term
+admin.product.listsubscriptionterm.nosubscriptiontermsdefined=There are currently no subscription terms defined.
 admin.product.noProductsDefined=No Products have been entered.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
@@ -1351,7 +1373,7 @@ entity.stockreceiver.packingSlipNumber=Packing Slip Number
 entity.subscriptionBenefit.accessCodeType=Access Code Type
 entity.subscriptionBenefit.categories=Categories
 entity.subscriptionBenefit.categoryQuantity=License Count (Category)
-entity.subscriptionBenefit.content=Content
+entity.subscriptionBenefit.contents=Contents
 entity.subscriptionBenefit.contentQuantity=License Count (Content)
 entity.subscriptionBenefit.priceGroupQuantity=License Count (Price Group)
 entity.subscriptionBenefit.priceGroups=Price Groups
