More tweeks to RB Keys

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -722,6 +722,8 @@ entity.subscriptionTerm.initialTerm=Initial Term
 entity.subscriptionTerm.renewalTerm=Renewal Term
 entity.subscriptionTerm.subscriptionBenefits=Subscription Benefits
 entity.subscriptionTerm.subscriptionTermName=Subscription Term Name
+entity.subscriptionbenefit=Subscription Benefit
+entity.subscriptionbenefit_plural=Subscription Benifits
 entity.subscriptionbenifit_plural=Subscription Benifits
 entity.subscriptionterm_plural=Subscription Terms
 entity.taxCategory.taxCategoryName=Category Name
