More Misc updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -43,6 +43,8 @@ admin.pricing=Pricing Manager
 admin.pricing.detailpromotion=Promotion Detail
 admin.pricing_nav=Pricing
 admin.product=Product Manager
+admin.product.brandtabs.products=Products
+admin.product.brandtabs.vendors=Vendors
 admin.product_nav=Products
 admin.report=Reporting Services
 admin.report.order=Order Report
@@ -202,7 +204,7 @@ entity.StockAdjustment.stockAdjustmentType=Type
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
 entity.VendorEmailAddress.emailAddress=Email Address
-entity.account.accountDetails=Account Details
+entity.account=Account
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.accountName=Account Name
@@ -228,6 +230,7 @@ entity.accountPaymentMethodCreditCard.creditCardType=Card Type
 entity.accountPaymentMethodCreditCard.expirationMonth=Expiration Month
 entity.accountPaymentMethodCreditCard.expirationYear=Expiration Year
 entity.accountPaymentMethodCreditCard.nameOnCreditCard=Name On Card
+entity.account_plural=Accounts
 entity.accountaddress.account=account
 entity.accountaddress.accountAddressID=accountAddressID
 entity.accountaddress.accountAddressName=Nick Name
