Added some logic for modal's

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -45,6 +45,7 @@ admin.pricing_nav=Pricing
 admin.product=Product Manager
 admin.product.brandtabs.products=Products
 admin.product.brandtabs.vendors=Vendors
+admin.product.producttabs.skus=Skus
 admin.product_nav=Products
 admin.report=Reporting Services
 admin.report.order=Order Report
